addons/dashboard/manifests/ingress-nginx-gateway-fabric/dashboard--nginx-gateway.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

# The kubernetes-dashboard service exposes an angular application on port 443
# The angular application is design in such a way that it constructs the
# relative paths based on the value stored in the x-forwarded-prefix header
# of the request. So if the application is exposed on another path than root,
# this header must have as value that path.

# this ingress will be merged with ingress provided in:
# addons/ingress/nginx/manifests/cluster-local-ingress.yaml
# and exposes the kubernetes-dashboard angular application on:
# https://k2s.cluster.local/dashboard/
# The certificate is taken from k8s secret 'k2s.cluster.local-tls'
# (see addons/ingress/nginx/manifests/cluster-local-ingress.yaml)
# NOTE: there is a glitch in dashboard,
# causing the trailing / in bot URLs to be needed, i.e.
# https://k2s.cluster.local/dashboard will not work!
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dashboard-nginx-gateway-cluster-local
  namespace: dashboard
spec:
  gatewayClassName: nginx-gateway
  listeners:
  - hostname: k2s.cluster.local
    name: k2s-cluster-local-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard-nginx-gateway-cluster-local
  namespace: dashboard
spec:
  hostnames:
  - k2s.cluster.local
  parentRefs:
  - name: dashboard-nginx-gateway-cluster-local
  rules:
  - backendRefs:
    - name: kubernetes-dashboard-kong-proxy
      port: 443
    matches:
    - path:
        type: PathPrefix
        value: /dashboard/(.*)
status:
  parents: []
